# hwdesign

./: .gitignore  _config.yml  pyproject.toml  readme.md
demos/basic_logic/: constraints.xdc  lin_relu.sv  poly_fun.sv  simp_fun.sv  tb_lin_relu.sv  tb_poly_fun.sv  tb_simp_fun.sv  timing_diag.ipynb
demos/fsm/: run.tcl
docs/aiautograder/: howto.md  index.md  openai.md  submit.md
docs/common/: index.md  vitis_build.md  vivado_build.md
docs/labs/subc/: python.md  submit.md  sv.md
docs/loopopt/: buildex.md  paramsweep.md  pipelining.md  synth.md  unrolling.md
docs/nyu/: units.md
docs/scalar_adder/: add_ip.md  fpga_build.md  pynq.md  vitis_ip.md
docs/scalar_fun/: rtlsim.md  vitis_ip.md
docs/setup/: index.md
docs/setup/hw_setup/: index.md  ip_connect.md  pynqz2.md
docs/setup/sw_installation/: index.md  license.md  python.md  repo.md  vivado_build.md
docs/sharedmem/: axi.md  fpgabuild.md  index.md  vitisip.md
docs/support/amd/: fpga_part.md  install_win.md  installation.md  lauching.md  (+3 more)
docs/sw_installation/: vitis_build.md
docs/units/: index.md
fifoif/python/: view_axi_stream.ipynb
labs/subc/: submit.py  theory.md
scalar_fun/overlay/: scalar_fun.bit  scalar_fun.hwh  scalar_fun.tcl
units/styles/: course.sty
units/unit00_course_intro/: course_intro.pptx
units/unit01_basic_logic/: basic_logic.pptx
units/unit02_numbers/: review_numbers.pptx
units/unit03_procif/: procif.pptx
units/unit04_timing/: ~$timing.pptx
vector_mult/overlay/: vector_mult.tcl
xilinxutils/: timing.py  vcd.py
xilinxutils/scripts/: sv_sim.py  xsim_vcd.py
(+41 files in other folders)
